--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,16 @@
     tools:context=".ui.MainActivity">
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
-      app:menu="@menu/bottom_navigation_menu"
-      app:labelVisibilityMode="labeled"
       android:id="@+id/bottomNavigation"
       android:layout_width="match_parent"
       android:layout_height="59dp"
       android:layout_gravity="bottom"
+      app:labelVisibilityMode="labeled"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent" />
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:menu="@menu/bottom_navigation_menu" />
 
   <fragment
       android:id="@+id/nav_host_fragment_activity_main"
