--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,28 @@
   <fragment
       android:id="@+id/nav_host_fragment_activity_main"
       android:name="androidx.navigation.fragment.NavHostFragment"
-      android:layout_width="409dp"
-      android:layout_height="602dp"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_marginTop="59dp"
+      android:layout_marginBottom="59dp"
       app:defaultNavHost="true"
-      app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
+      app:layout_constraintBottom_toBottomOf="@+id/bottomNavigation"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0"
       app:navGraph="@navigation/mobile_navigation" />
+
+  <androidx.appcompat.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="59dp"
+      android:background="@color/purple_700"
+      android:minHeight="?attr/actionBarSize"
+      android:theme="?attr/actionBarTheme"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
