--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,15 +7,27 @@
     tools:context=".ui.home.HomeFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/search_bar"
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="59dp"
         android:background="@color/purple_700"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        app:contentInsetStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="false"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="5dp" />
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView"
@@ -24,7 +35,8 @@
         android:layout_height="47dp"
         android:background="@color/purple_700"
         android:fontFamily="@font/merriweather_sans"
-        android:text=" Trending in Swansea"
+        android:paddingStart="10dp"
+        android:text="Trending in Swansea"
         android:textSize="34sp"
         android:textStyle="bold"
         android:typeface="normal"
