--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,7 +16,7 @@
         android:title="@string/title_favourites" />
 
     <item
-        android:id="@+id/navigation_login"
+        android:id="@+id/navigation_transfer"
         android:icon="@drawable/ic_account_24"
         android:title="@string/title_account" />
 </menu>
